# rovr

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Design  HIDDEN_FILES_FEATURE.md  PLAN.md  README.md  codebook.toml  fix-negative-input  fix-negative-input.cpp  justfile  nuitka.config.yml  package.json  pnpm-lock.yaml  pyproject.toml  remove_macos_only.sh  requirements.txt  test1.toml  test2.toml  test_path_function.py  thing  unix-test.py  win-test.py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: builder.yml  deploy.yml  docs-build.yml  formatting.yml  issue-labeler.yml  moderator.yml  nuitka-build.yml  release.yml  test.yml  try-build.yml
docs/: astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
docs/ai/: README.md  themes.md
docs/public/: install.ps1  install.sh  uninstall.ps1  uninstall.sh  vi-keybinds.js
docs/scripts/: generate_keybinds.py  generate_schema.py  post-nuitka-build.py  pre_nuitka_build.py
docs/src/: content.config.ts
docs/src/components/: GithubStats.astro  InlineSVG.astro
docs/src/content/docs/: 404.md  index.mdx  overview.mdx  schema.mdx
docs/src/content/docs/configuration/: configuration.mdx  themeing.mdx  theming.mdx
docs/src/content/docs/contributing/: how-to-contribute.mdx  optimisation.mdx  project-structure.mdx
docs/src/content/docs/dev/: index.mdx  overview.mdx
docs/src/content/docs/dev/configuration/: configuration.mdx  theming.mdx
docs/src/content/docs/dev/contributing/: how-to-contribute.mdx  project-structure.mdx
docs/src/content/docs/dev/features/: cd-on-quit.mdx  context-menu.mdx  custom-openers.md  detail-columns.mdx  editor.mdx  image-previews.mdx  plugins.mdx  recycle-bin.mdx  shell-exec.mdx  sorting.mdx
docs/src/content/docs/dev/get-started/: installation.mdx
docs/src/content/docs/dev/guides/: tips-and-tricks.mdx
docs/src/content/docs/dev/reference/: keybindings.mdx  schema.mdx
docs/src/content/docs/features/: background-processes.mdx  cd-on-quit.mdx  context-menu.mdx  custom-openers.md  detail-columns.mdx  image-previews.mdx  modes.mdx  persistent-state.mdx  pinned-folders.mdx  plugins.mdx  previewing-files.mdx  recycle-bin.mdx  search.mdx  shell-exec.mdx  sorting.mdx
docs/src/content/docs/get-started/: installation.mdx  protocol.mdx  tutorial.mdx
docs/src/content/docs/guides/: file-operations.mdx  tips-and-tricks.mdx  user-interface.mdx
docs/src/content/docs/reference/: keybindings.mdx  schema.mdx
docs/src/styles/: custom.css
src/rovr/: __init__.py  __main__.py  app.py  first_launch.py  first_launch.tcss  inspector.py  maps.py  resizebar.py  search_container.py  state_manager.py  style.tcss  utils.py  validators.py  widgets.py
src/rovr/action_buttons/: __init__.py  copy_button.py  copy_path.py  cut_button.py  delete_button.py  new_item_button.py  paste_button.py  rename_item_button.py  sort_order.py  system_copy_button.py  unzip_button.py  zip_button.py
src/rovr/cache/: _platform.py
src/rovr/classes/: __init__.py  archive.py  config.py  config.pyi  mixins.py  session_manager.py  textual_options.py  textual_validators.py  theme.py  type_aliases.py
src/rovr/components/: __init__.py  base_search_screen.py  popup_option_list.py  search_container.py  special_option_list.py  special_option_lists.py
src/rovr/config/: __init__.py  config.toml  migration.json  models.py  schema.json
src/rovr/config/keybinds/: sane.toml  vim.toml
src/rovr/config/themes/: ansi-dark.tcss  ansi-light.tcss  atom-one-dark.tcss  atom-one-light.tcss  catppuccin-frappe.tcss  catppuccin-latte.tcss  catppuccin-macchiato.tcss  catppuccin-mocha.tcss  dracula.tcss  flexoki.tcss  gruvbox.tcss  monokai.tcss  nord.tcss  rose-pine-dawn.tcss  rose-pine-moon.tcss  rose-pine.tcss  solarized-dark.tcss  solarized-light.tcss  textual-dark.tcss  textual-light.tcss  tokyo-night.tcss
src/rovr/core/: __init__.py  file_list.py  file_list_container.py  file_list_right_click_menu.py  pinned_sidebar.py  pinned_sidebar_container.py  preview_container.py
src/rovr/footer/: clipboard_container.py  metadata_container.py  process_container.py
src/rovr/functions/: cli.py  config.py  details.py  drive_workers.py  folder_prefs.py  icons.py  path.py  pdf.py  pins.py  preview_utils.py  preview_workers.py  resample.py  scorer.py  system_clipboard.py  themes.py  ui_state.py  utils.py
src/rovr/header/: header.py  tabs.py
src/rovr/managers/: state.py
src/rovr/monkey_patches/: _classes.py  _platform.py  _spam.py  magic_data.json  puremagic.py  puremagic_patch.py
src/rovr/navigation_widgets/: buttons.py  path_input.py
src/rovr/pdf/: pdf_viewer.py
src/rovr/screens/: __init__.py  __main__.py  _tester.py  archive_creator.py  common_file_name_do_what.py  delete_files.py  dismissable.py  dismissible.py  drag_and_drop.py  fd_search.py  file_in_use.py  file_search.py  give_permission.py  input.py  keybinds.py  kitty_dnd.py  paste_drop.py  paste_screen.py  rg_search.py  shell_exec.py  theme_chooser.py  theme_switcher.py  trash.py  typed.py  way_too_small.py  yes_or_no.py  zd_to_directory.py  zip_up.py
src/rovr/variables/: constants.py  maps.py
src/utils/: generate_schema.py
tests/: conftest.py  helpers.py  test_action_buttons.py  test_app.py  test_clipboard.py  test_details.py  test_drive_workers.py  test_filelist_component_classes.py  test_folder_prefs.py  test_functions.py  test_functions_icons.py  test_functions_path.py  test_functions_pins.py  test_functions_themes.py  test_functions_utils.py  test_metadata.py  test_multiprocessing_fallbacks.py  test_navigation.py  test_parse_action.py  test_pinned_sidebar.py  test_state_manager.py  test_tcss_extract_var.py  test_validators.py
tests/components/: test_action_buttons.py  test_keybinds.py  test_yes_or_no.py
tests/integration/: test_app.py  test_file_operations.py  test_keyboard_shortcuts.py  test_navigation.py  test_state_manager.py
tests/unit/: test_archive.py  test_config.py  test_icons.py  test_path.py  test_utils.py
