[project]
name = "rovr"
version = "0.8.2"
description = "A post-modern terminal file explorer"
readme = "README.md"
requires-python = "==3.13.*"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [{ name = "NSPC911" }]
keywords = ["filemanager", "fs", "python", "textual", "tui"]
classifiers = [
  "Development Status :: 4 - Beta",
  # "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.13",
  # "Framework :: Textual", # I highly believe textual deserves its own category
  "Topic :: Desktop Environment :: File Managers",
  "Topic :: Utilities",
]
dependencies = [
  "backports-zstd>=1.3.0; python_version < '3.14'",
  "fastjsonschema>=2.21.2",
  "humanize>=4.15.0",
  "pathvalidate>=3.3.1",
  "pillow>=12.2.0",
  "platformdirs>=4.9.0",
  "psutil>=7.2.0; sys_platform != 'android'",
  "puremagic>=2.2.0",
  "rarfile>=4.2",
  "resvg-py>=0.3.1",
  # https://github.com/Textualize/rich/commit/69cee6e1be30071c3ee994608590004eddce1501 causes a regression
  # in the way it handles CRLF endings (it splits by `\n`, but ignores the `r` part), which results in
  # empty lines because `\r` is a carriage return and not a newline on Windows.
  # Appropriate issue: https://github.com/Textualize/rich/issues/4090
  "rich>=14.3.1",
  "send2trash>=2.1.0",
  "textual~=8.0",
  "textual-autocomplete>=4.0.6",
  "textual-image[textual]<0.10.0",
  "textual-speedups>=0.2.1",
  "tomli>=2.4.0",
]

[project.urls]
Issues = "https://github.com/NSPC911/rovr/issues"
Source = "https://github.com/NSPC911/rovr"
Documentation = "https://nspc911.github.io/rovr"

[project.scripts]
rovr = "rovr:main"

[dependency-groups]
build = [
  "zstandard>=0.25.0",
  "poethepoet>=0.41.0",
  "nuitka>=4.0.0",
]
dev = [
  "poethepoet>=0.41.0",
  "prek>=0.2.25",
  "ruff>=0.15.0",
  "textual-dev>=1.8.0",
  "ty==0.0.32",
  "pyinstrument>=5.1.2",
  "commitizen>=4.13.0",
]
docscripts = [
  "json-schema-for-humans>=1.5.1",
  "jsonschema-gentypes>=2.13.0",
  "poethepoet>=0.41.0",
  "ruff>=0.15.0",
]
test = [
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-xdist>=3.8.0",
]

[build-system]
requires = ["uv_build==0.11.*"]
build-backend = "uv_build"

[tool.uv]
compile-bytecode = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[tool.poe.executor]
type = "uv"
no-sync = true

[tool.poe.tasks]
_hash_dump.shell = "git rev-parse HEAD > src/rovr/COMMIT_HASH"
_hash_clean.shell = "python -c \"import os; os.path.exists('src/rovr/COMMIT_HASH') and os.remove('src/rovr/COMMIT_HASH')\""

_docscripts_setup.cmd = "uv sync --group docscripts"
_test_setup.cmd = "uv sync --group test"

run.help = "Run rovr"
run.cmd = "rovr"
dev.help = "Run rovr in development mode with textual-dev"
dev.cmd = "textual run --dev rovr.__main__:cli --"
log.help = "Launch textual's console (need rovr to be launched as dev)"
log.cmd = "textual console -x WORKER -x SYSTEM -x DEBUG -x EVENT"

gen-schema.help = "Generate the JSON schema for rovr's config"
gen-schema.sequence = [
  "_docscripts_setup",
  { cmd = "docs/scripts/generate_schema.py" },
]
icon-test.help = "Print all available icons to the terminal for testing"
icon-test.cmd = "docs/scripts/icon_test.py"
gen-keys.help = "Generate the keybinds documentation"
gen-keys.cmd = "docs/scripts/generate_keybinds.py"
typed.help = ""
typed.ref = "schema-to-dict"
schema-to-dict.help = "Convert the JSON schema into a Python TypedDict for internal use"
schema-to-dict.sequence = [
  "_docscripts_setup",
  { cmd = "jsonschema-gentypes --json-schema ./src/rovr/config/schema.json --python ./src/rovr/classes/config.py" },
  "format"
]

check.help = "Run all checks (type checking and linting)"
check.sequence = [ { cmd = "ty check" },{ cmd = "ruff check" } ]

fmt.help = ""
fmt.ref = "format"
format.help = "Run ruff related formatters"
format.sequence = [ { cmd = "ruff check --unsafe-fixes --fix"}, { cmd = "ruff format"} ]

svg-fmt.help = ""
svg-fmt.ref = "screenshot-format"
screenshot-format.help = "Format all SVG screenshots in the docs"
screenshot-format.cmd = 'pnpx prettier --write "docs/public/screenshots/*.svg" --parser html --bracket-same-line --print-width 160'

flame.help = "Start rovr with pyinstrument for flamegraph profiling"
flame.cmd = "pyinstrument --renderer=html --timeline --use-timing-thread --show-all -m rovr"

snap.help = ""
snap.ref = "snip"
snip.help = "Take a screenshot of the app after a certain delay, before saving to the docs screenshots folder"
snip.cmd = "textual run --screenshot ${delay} rovr.__main__:cli --screenshot-path docs/public/screenshots --screenshot-filename ${filename} -- --without theme.transparent"
snip.args = [
  { name = "filename", help = "Filename of the screenshot", type = "string", positional = true, required = true },
  { name = "delay", help = "Delay in seconds before taking the screenshot", default = 10, type = "integer" },
]

tokei.help = "Run tokei"
tokei.cmd = "tokei --sort lines --exclude '*.svg' --exclude 'src/rovr/classes/config.py' --exclude '*lock*' --hidden"

[tool.poe.tasks.test]
help = "Run tests"
sequence = [
  "_test_setup",
  { cmd = "pytest -n ${workers} ${FILES}" }
]
args = [
  { name = "FILES", help = "Specific test files or directories to run (optional)", type = "string", positional = true, required = false, multiple = true },
  { name = "workers", help = "Number of parallel workers for test execution (optional)", default = 4, type = "integer", options = ["-n"] },
]

[tool.poe.tasks.build]
help = "Build rovr into an executable using Nuitka"
sequence = [
  { cmd = "uv sync --group build --no-dev" },  # no dev because for some reason, stuff gets included
  { cmd = "docs/scripts/pre_nuitka_build.py" },
  "_hash_dump",
  # --python-flag=-m
  { cmd = 'nuitka --lto=${lto} --mode=${mode} --report=${report} --user-package-configuration-file=nuitka.config.yml src/rovr --onefile-tempdir-spec="{TEMP}/rovr_onefile_0.8.2"' },
  "_hash_clean",
]
args = [
  { name = "mode", help = "Build mode: onefile (default) or standalone", default = "onefile", positional = true, choices = ["standalone", "onefile"] },
  { name = "lto", help = "Enable LTO (doesn't work with zig)", default = "yes", choices = ["yes", "no"], options = ["--lto"] },
  { name = "report", help = "Where to output the Nuitka report", default = "report.xml", options = ["--report"] },
]

[tool.poe.tasks.uv-build]
help = "Build rovr distributions using uv and include commit hash"
sequence = [
  "_hash_dump",
  { cmd = "uv build" },
  "_hash_clean",
]

[tool.pytest]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
force-exclude = true
exclude = []

[tool.ruff.lint]
select = [
  "ASYNC220",
  "ASYNC221",
  "ASYNC251",
  "ANN",
  "COM819",
  "C400",
  "DOC",
  "D404",
  "E",
  "F",
  "I",
  "N801", "N802", "N805",
  "PLE1142",
  "Q",
  "SIM",
  "TD",
  "W",
]
ignore = ["W505", "E501", "ANN002", "ANN003", "TD002", "TD003", "ANN401"]
preview = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
preview = true

[tool.ty.src]
exclude = [
  "src/rovr/classes/archive.py"
] # i dont want to add type indicators

[tool.ty.rules]
# possibly-missing-import = "ignore"
unresolved-reference = "ignore" # handled by ruff
unresolved-attribute = "ignore"
no-matching-overload = "ignore" # not that accurate
possibly-missing-attribute = "ignore" # no it is not missing
invalid-assignment = "warn" # probably already but warn for future
unused-ignore-comment = "ignore"
