[project]
name = "rovr"
version = "0.9.1"
description = "a stylish, batteries-included terminal file manager."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [{ name = "NSPC911" }]
keywords = ["filemanager", "fs", "python", "textual", "tui"]
classifiers = [
  "Development Status :: 4 - Beta",
  # "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.13",
  # "Framework :: Textual", # I highly believe textual deserves its own category
  "Topic :: Desktop Environment :: File Managers",
  "Topic :: Utilities",
]
dependencies = [
  "backports-zstd>=1.3.0; python_version < '3.14'",
  "fastjsonschema>=2.21.2",
  "humanize>=4.15.0",
  "multiarchive>=0.1.1",
  "pathvalidate>=3.3.1",
  "pillow>=12.2.0",
  "platformdirs>=4.9.0",
  "psutil>=7.2.0; sys_platform != 'android'",
  "puremagic>=2.2.0",
  "rarfile>=4.2",
  "resvg-py>=0.3.1",
  "rich==14.2.0",
  "send2trash>=2.1.0",
  "textual~=8.0",
  "textual-autocomplete>=4.0.6",
  "textual-image[textual]<0.10.0",
  "tomli>=2.4.0",
]

[project.urls]
Issues = "https://github.com/NSPC911/rovr/issues"
Source = "https://github.com/NSPC911/rovr"
Documentation = "https://nspc911.github.io/rovr"

[project.scripts]
rovr = "rovr:main"

[project.optional-dependencies]
speedup = [
  "textual-speedups>=0.2.1",
]

[dependency-groups]
build = [
  "zstandard>=0.25.0",
  "nuitka>=4.0.0",
]
dev = [
  "ruff>=0.15.0",
  "textual-dev>=1.8.0",
  "ty==0.0.40",
  "pyinstrument>=5.1.2",
  "commitizen>=4.13.0",
]
docscripts = [
  "json-schema-for-humans>=1.5.1",
  "jsonschema-gentypes>=2.13.0",
  "ruff>=0.15.0",
]
speedup = [
    "textual-speedups>=0.2.1",
]
test = [
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-xdist>=3.8.0",
]

[build-system]
requires = ["uv_build==0.11.*"]
build-backend = "uv_build"

[tool.uv]
compile-bytecode = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[tool.pytest]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
  'ignore::DeprecationWarning'
]

[tool.ruff]
force-exclude = true
exclude = []

[tool.ruff.lint]
select = [
  "ASYNC220",
  "ASYNC221",
  "ASYNC251",
  "ANN",
  "COM819",
  "C400",
  "DOC",
  "D404",
  "E",
  "F",
  "I",
  "N801", "N802", "N805",
  "PLE1142",
  "Q",
  "SIM",
  "TD",
  "W",
]
ignore = ["W505", "E501", "ANN002", "ANN003", "TD002", "TD003", "ANN401"]
preview = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
preview = true

[tool.ty.rules]
# possibly-missing-import = "ignore"
unresolved-reference = "ignore" # handled by ruff
unresolved-attribute = "ignore"
no-matching-overload = "ignore" # not that accurate
possibly-missing-attribute = "ignore" # no it is not missing
invalid-assignment = "warn" # probably already but warn for future
unused-ignore-comment = "ignore"
